Bug 243351 - Fix more missing exception checks in JSGenericTypedArrayViewPrototypeFunctions.h.
Summary: Fix more missing exception checks in JSGenericTypedArrayViewPrototypeFunction...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: JavaScriptCore (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Mark Lam
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2022-07-29 11:42 PDT by Mark Lam
Modified: 2022-07-29 11:55 PDT (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mark Lam 2022-07-29 11:42:20 PDT
These were detected by a Debug build run on JSC stress tests.
Comment 1 Radar WebKit Bug Importer 2022-07-29 11:42:44 PDT
<rdar://problem/97796738>
Comment 2 Mark Lam 2022-07-29 11:45:44 PDT
Pull request: https://github.com/WebKit/WebKit/pull/2858
Comment 3 EWS 2022-07-29 11:55:39 PDT
Committed 252958@main (1b9e51c7647a): <https://commits.webkit.org/252958@main>

Reviewed commits have been landed. Closing PR #2858 and removing active labels.